# get_baba

./: pyproject.toml
get_baba/: read_conditions.ipynb
update_baba/download_jra_files/: update_baba.py
update_baba/download_jra_files/download_jra_files/: items.py  middlewares.py  pipelines.py  settings.py
update_baba/download_jra_files/download_jra_files/spiders/: download_jra_files_spider.py
