[project]
name = "keiba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.34.0",
    "psycopg2>=2.9.11",
    "pypdf>=5.4.0",
    "pyyaml>=6.0.3",
    "scrapy>=2.12.0",
    "seaborn>=0.13.2",
    "tabula-py>=2.10.0",
]
